// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field for array setting should render as read only with help text if overridden 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Array test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        default_value
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="array:test:setting-aria"
      title={
        <h3>
          Array test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "array:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <EuiText
            grow={true}
            size="xs"
          >
            <FormattedMessage
              defaultMessage="This setting is overriden by the Kibana server and can not be changed."
              id="kbn.management.settings.field.helpText"
              values={Object {}}
            />
          </EuiText>
        }
        isInvalid={false}
        label="array:test:setting"
      >
        <EuiFieldText
          aria-label="array test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-array:test:setting"
          disabled={true}
          fullWidth={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="user, value"
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for array setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Array test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="array:test:setting-aria"
      title={
        <h3>
          Array test setting
          <EuiIconTip
            aria-label="Custom setting"
            color="primary"
            content={
              <FormattedMessage
                defaultMessage="Custom setting"
                id="kbn.management.settings.field.customSettingTooltip"
                values={Object {}}
              />
            }
            type="asterisk"
          />
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "array:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="array:test:setting"
      >
        <EuiFieldText
          aria-label="array test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-array:test:setting"
          disabled={false}
          fullWidth={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="default_value"
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for array setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Array test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="array:test:setting-aria"
      title={
        <h3>
          Array test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "array:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="array:test:setting"
      >
        <EuiFieldText
          aria-label="array test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-array:test:setting"
          disabled={false}
          fullWidth={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="default_value"
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for array setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Array test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        default_value
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="array:test:setting-aria"
      title={
        <h3>
          Array test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "array:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <span>
            <span>
              <EuiLink
                aria-label="Reset {ariaName} to default"
                color="primary"
                data-test-subj="advancedSetting-resetField-array:test:setting"
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Reset to default"
                  id="kbn.management.settings.field.resetToDefaultLinkText"
                  values={Object {}}
                />
              </EuiLink>
                 
            </span>
          </span>
        }
        isInvalid={false}
        label="array:test:setting"
      >
        <EuiFieldText
          aria-label="array test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-array:test:setting"
          disabled={false}
          fullWidth={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="user, value"
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for boolean setting should render as read only with help text if overridden 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Boolean test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        true
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="boolean:test:setting-aria"
      title={
        <h3>
          Boolean test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "boolean:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <EuiText
            grow={true}
            size="xs"
          >
            <FormattedMessage
              defaultMessage="This setting is overriden by the Kibana server and can not be changed."
              id="kbn.management.settings.field.helpText"
              values={Object {}}
            />
          </EuiText>
        }
        isInvalid={false}
        label="boolean:test:setting"
      >
        <EuiSwitch
          aria-label="boolean test setting"
          checked={false}
          data-test-subj="advancedSetting-editField-boolean:test:setting"
          disabled={true}
          label="Off"
          onChange={[Function]}
          onKeyDown={[Function]}
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for boolean setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Boolean test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="boolean:test:setting-aria"
      title={
        <h3>
          Boolean test setting
          <EuiIconTip
            aria-label="Custom setting"
            color="primary"
            content={
              <FormattedMessage
                defaultMessage="Custom setting"
                id="kbn.management.settings.field.customSettingTooltip"
                values={Object {}}
              />
            }
            type="asterisk"
          />
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "boolean:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="boolean:test:setting"
      >
        <EuiSwitch
          aria-label="boolean test setting"
          checked={true}
          data-test-subj="advancedSetting-editField-boolean:test:setting"
          disabled={false}
          label="On"
          onChange={[Function]}
          onKeyDown={[Function]}
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for boolean setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Boolean test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="boolean:test:setting-aria"
      title={
        <h3>
          Boolean test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "boolean:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="boolean:test:setting"
      >
        <EuiSwitch
          aria-label="boolean test setting"
          checked={true}
          data-test-subj="advancedSetting-editField-boolean:test:setting"
          disabled={false}
          label="On"
          onChange={[Function]}
          onKeyDown={[Function]}
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for boolean setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Boolean test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        true
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="boolean:test:setting-aria"
      title={
        <h3>
          Boolean test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "boolean:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <span>
            <span>
              <EuiLink
                aria-label="Reset {ariaName} to default"
                color="primary"
                data-test-subj="advancedSetting-resetField-boolean:test:setting"
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Reset to default"
                  id="kbn.management.settings.field.resetToDefaultLinkText"
                  values={Object {}}
                />
              </EuiLink>
                 
            </span>
          </span>
        }
        isInvalid={false}
        label="boolean:test:setting"
      >
        <EuiSwitch
          aria-label="boolean test setting"
          checked={false}
          data-test-subj="advancedSetting-editField-boolean:test:setting"
          disabled={false}
          label="Off"
          onChange={[Function]}
          onKeyDown={[Function]}
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for image setting should render as read only with help text if overridden 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Image test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        null
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="image:test:setting-aria"
      title={
        <h3>
          Image test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "image:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <EuiText
            grow={true}
            size="xs"
          >
            <FormattedMessage
              defaultMessage="This setting is overriden by the Kibana server and can not be changed."
              id="kbn.management.settings.field.helpText"
              values={Object {}}
            />
          </EuiText>
        }
        isInvalid={false}
        label="image:test:setting"
      >
        <EuiImage
          allowFullScreen={true}
          alt="image:test:setting"
          aria-label="image test setting"
          fullScreenIconColor="light"
          size="original"
          url="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for image setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Image test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="image:test:setting-aria"
      title={
        <h3>
          Image test setting
          <EuiIconTip
            aria-label="Custom setting"
            color="primary"
            content={
              <FormattedMessage
                defaultMessage="Custom setting"
                id="kbn.management.settings.field.customSettingTooltip"
                values={Object {}}
              />
            }
            type="asterisk"
          />
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "image:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="image:test:setting"
      >
        <EuiFilePicker
          accept=".jpg,.jpeg,.png"
          compressed={false}
          data-test-subj="advancedSetting-editField-image:test:setting"
          disabled={false}
          initialPromptText="Select or drag and drop a file"
          onChange={[Function]}
          onKeyDown={[Function]}
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for image setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Image test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="image:test:setting-aria"
      title={
        <h3>
          Image test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "image:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="image:test:setting"
      >
        <EuiFilePicker
          accept=".jpg,.jpeg,.png"
          compressed={false}
          data-test-subj="advancedSetting-editField-image:test:setting"
          disabled={false}
          initialPromptText="Select or drag and drop a file"
          onChange={[Function]}
          onKeyDown={[Function]}
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for image setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Image test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        null
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="image:test:setting-aria"
      title={
        <h3>
          Image test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "image:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <span>
            <span>
              <EuiLink
                aria-label="Reset {ariaName} to default"
                color="primary"
                data-test-subj="advancedSetting-resetField-image:test:setting"
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Reset to default"
                  id="kbn.management.settings.field.resetToDefaultLinkText"
                  values={Object {}}
                />
              </EuiLink>
                 
            </span>
            <span>
              <EuiLink
                aria-label="Change {ariaName}"
                color="primary"
                data-test-subj="advancedSetting-changeImage-image:test:setting"
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Change image"
                  id="kbn.management.settings.field.changeImageLinkText"
                  values={Object {}}
                />
              </EuiLink>
            </span>
          </span>
        }
        isInvalid={false}
        label="image:test:setting"
      >
        <EuiImage
          allowFullScreen={true}
          alt="image:test:setting"
          aria-label="image test setting"
          fullScreenIconColor="light"
          size="original"
          url="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for json setting should render as read only with help text if overridden 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Json test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueTypeJsonText"
                  values={
                    Object {
                      "value": <EuiCodeBlock
                        language="json"
                        overflowHeight={null}
                        paddingSize="s"
                      >
                        {}
                      </EuiCodeBlock>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="json:test:setting-aria"
      title={
        <h3>
          Json test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "json:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <EuiText
            grow={true}
            size="xs"
          >
            <FormattedMessage
              defaultMessage="This setting is overriden by the Kibana server and can not be changed."
              id="kbn.management.settings.field.helpText"
              values={Object {}}
            />
          </EuiText>
        }
        isInvalid={false}
        label="json:test:setting"
      >
        <div
          data-test-subj="advancedSetting-editField-json:test:setting"
        >
          <EuiCodeEditor
            aria-label="json test setting"
            editorProps={
              Object {
                "$blockScrolling": Infinity,
              }
            }
            height="auto"
            isReadOnly={true}
            maxLines={30}
            minLines={6}
            mode="json"
            onChange={[Function]}
            setOptions={
              Object {
                "showLineNumbers": false,
                "tabSize": 2,
              }
            }
            theme="textmate"
            value="{\\"hello\\": \\"world\\"}"
            width="100%"
          />
        </div>
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for json setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Json test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="json:test:setting-aria"
      title={
        <h3>
          Json test setting
          <EuiIconTip
            aria-label="Custom setting"
            color="primary"
            content={
              <FormattedMessage
                defaultMessage="Custom setting"
                id="kbn.management.settings.field.customSettingTooltip"
                values={Object {}}
              />
            }
            type="asterisk"
          />
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "json:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="json:test:setting"
      >
        <div
          data-test-subj="advancedSetting-editField-json:test:setting"
        >
          <EuiCodeEditor
            aria-label="json test setting"
            editorProps={
              Object {
                "$blockScrolling": Infinity,
              }
            }
            height="auto"
            isReadOnly={false}
            maxLines={30}
            minLines={6}
            mode="json"
            onChange={[Function]}
            setOptions={
              Object {
                "showLineNumbers": false,
                "tabSize": 2,
              }
            }
            theme="textmate"
            value="{\\"foo\\": \\"bar\\"}"
            width="100%"
          />
        </div>
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for json setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Json test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueTypeJsonText"
                  values={
                    Object {
                      "value": <EuiCodeBlock
                        language="json"
                        overflowHeight={null}
                        paddingSize="s"
                      >
                        {}
                      </EuiCodeBlock>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="json:test:setting-aria"
      title={
        <h3>
          Json test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "json:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <span>
            <span>
              <EuiLink
                aria-label="Reset {ariaName} to default"
                color="primary"
                data-test-subj="advancedSetting-resetField-json:test:setting"
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Reset to default"
                  id="kbn.management.settings.field.resetToDefaultLinkText"
                  values={Object {}}
                />
              </EuiLink>
                 
            </span>
          </span>
        }
        isInvalid={false}
        label="json:test:setting"
      >
        <div
          data-test-subj="advancedSetting-editField-json:test:setting"
        >
          <EuiCodeEditor
            aria-label="json test setting"
            editorProps={
              Object {
                "$blockScrolling": Infinity,
              }
            }
            height="auto"
            isReadOnly={false}
            maxLines={30}
            minLines={6}
            mode="json"
            onChange={[Function]}
            setOptions={
              Object {
                "showLineNumbers": false,
                "tabSize": 2,
              }
            }
            theme="textmate"
            value="{\\"foo\\": \\"bar\\"}"
            width="100%"
          />
        </div>
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for json setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Json test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueTypeJsonText"
                  values={
                    Object {
                      "value": <EuiCodeBlock
                        language="json"
                        overflowHeight={null}
                        paddingSize="s"
                      >
                        {}
                      </EuiCodeBlock>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="json:test:setting-aria"
      title={
        <h3>
          Json test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "json:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <span>
            <span>
              <EuiLink
                aria-label="Reset {ariaName} to default"
                color="primary"
                data-test-subj="advancedSetting-resetField-json:test:setting"
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Reset to default"
                  id="kbn.management.settings.field.resetToDefaultLinkText"
                  values={Object {}}
                />
              </EuiLink>
                 
            </span>
          </span>
        }
        isInvalid={false}
        label="json:test:setting"
      >
        <div
          data-test-subj="advancedSetting-editField-json:test:setting"
        >
          <EuiCodeEditor
            aria-label="json test setting"
            editorProps={
              Object {
                "$blockScrolling": Infinity,
              }
            }
            height="auto"
            isReadOnly={false}
            maxLines={30}
            minLines={6}
            mode="json"
            onChange={[Function]}
            setOptions={
              Object {
                "showLineNumbers": false,
                "tabSize": 2,
              }
            }
            theme="textmate"
            value="{\\"hello\\": \\"world\\"}"
            width="100%"
          />
        </div>
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for markdown setting should render as read only with help text if overridden 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Markdown test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        null
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="markdown:test:setting-aria"
      title={
        <h3>
          Markdown test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "markdown:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <EuiText
            grow={true}
            size="xs"
          >
            <FormattedMessage
              defaultMessage="This setting is overriden by the Kibana server and can not be changed."
              id="kbn.management.settings.field.helpText"
              values={Object {}}
            />
          </EuiText>
        }
        isInvalid={false}
        label="markdown:test:setting"
      >
        <div
          data-test-subj="advancedSetting-editField-markdown:test:setting"
        >
          <EuiCodeEditor
            aria-label="markdown test setting"
            editorProps={
              Object {
                "$blockScrolling": Infinity,
              }
            }
            height="auto"
            isReadOnly={true}
            maxLines={30}
            minLines={6}
            mode="markdown"
            onChange={[Function]}
            setOptions={
              Object {
                "showLineNumbers": false,
                "tabSize": 2,
              }
            }
            theme="textmate"
            value="**bold**"
            width="100%"
          />
        </div>
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for markdown setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Markdown test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="markdown:test:setting-aria"
      title={
        <h3>
          Markdown test setting
          <EuiIconTip
            aria-label="Custom setting"
            color="primary"
            content={
              <FormattedMessage
                defaultMessage="Custom setting"
                id="kbn.management.settings.field.customSettingTooltip"
                values={Object {}}
              />
            }
            type="asterisk"
          />
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "markdown:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="markdown:test:setting"
      >
        <div
          data-test-subj="advancedSetting-editField-markdown:test:setting"
        >
          <EuiCodeEditor
            aria-label="markdown test setting"
            editorProps={
              Object {
                "$blockScrolling": Infinity,
              }
            }
            height="auto"
            isReadOnly={false}
            maxLines={30}
            minLines={6}
            mode="markdown"
            onChange={[Function]}
            setOptions={
              Object {
                "showLineNumbers": false,
                "tabSize": 2,
              }
            }
            theme="textmate"
            value=""
            width="100%"
          />
        </div>
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for markdown setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Markdown test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="markdown:test:setting-aria"
      title={
        <h3>
          Markdown test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "markdown:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="markdown:test:setting"
      >
        <div
          data-test-subj="advancedSetting-editField-markdown:test:setting"
        >
          <EuiCodeEditor
            aria-label="markdown test setting"
            editorProps={
              Object {
                "$blockScrolling": Infinity,
              }
            }
            height="auto"
            isReadOnly={false}
            maxLines={30}
            minLines={6}
            mode="markdown"
            onChange={[Function]}
            setOptions={
              Object {
                "showLineNumbers": false,
                "tabSize": 2,
              }
            }
            theme="textmate"
            value=""
            width="100%"
          />
        </div>
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for markdown setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Markdown test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        null
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="markdown:test:setting-aria"
      title={
        <h3>
          Markdown test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "markdown:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <span>
            <span>
              <EuiLink
                aria-label="Reset {ariaName} to default"
                color="primary"
                data-test-subj="advancedSetting-resetField-markdown:test:setting"
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Reset to default"
                  id="kbn.management.settings.field.resetToDefaultLinkText"
                  values={Object {}}
                />
              </EuiLink>
                 
            </span>
          </span>
        }
        isInvalid={false}
        label="markdown:test:setting"
      >
        <div
          data-test-subj="advancedSetting-editField-markdown:test:setting"
        >
          <EuiCodeEditor
            aria-label="markdown test setting"
            editorProps={
              Object {
                "$blockScrolling": Infinity,
              }
            }
            height="auto"
            isReadOnly={false}
            maxLines={30}
            minLines={6}
            mode="markdown"
            onChange={[Function]}
            setOptions={
              Object {
                "showLineNumbers": false,
                "tabSize": 2,
              }
            }
            theme="textmate"
            value="**bold**"
            width="100%"
          />
        </div>
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for number setting should render as read only with help text if overridden 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Number test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        5
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="number:test:setting-aria"
      title={
        <h3>
          Number test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "number:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <EuiText
            grow={true}
            size="xs"
          >
            <FormattedMessage
              defaultMessage="This setting is overriden by the Kibana server and can not be changed."
              id="kbn.management.settings.field.helpText"
              values={Object {}}
            />
          </EuiText>
        }
        isInvalid={false}
        label="number:test:setting"
      >
        <EuiFieldNumber
          aria-label="number test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-number:test:setting"
          disabled={true}
          fullWidth={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          value={10}
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for number setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Number test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="number:test:setting-aria"
      title={
        <h3>
          Number test setting
          <EuiIconTip
            aria-label="Custom setting"
            color="primary"
            content={
              <FormattedMessage
                defaultMessage="Custom setting"
                id="kbn.management.settings.field.customSettingTooltip"
                values={Object {}}
              />
            }
            type="asterisk"
          />
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "number:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="number:test:setting"
      >
        <EuiFieldNumber
          aria-label="number test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-number:test:setting"
          disabled={false}
          fullWidth={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          value={5}
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for number setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Number test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="number:test:setting-aria"
      title={
        <h3>
          Number test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "number:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="number:test:setting"
      >
        <EuiFieldNumber
          aria-label="number test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-number:test:setting"
          disabled={false}
          fullWidth={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          value={5}
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for number setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Number test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        5
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="number:test:setting-aria"
      title={
        <h3>
          Number test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "number:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <span>
            <span>
              <EuiLink
                aria-label="Reset {ariaName} to default"
                color="primary"
                data-test-subj="advancedSetting-resetField-number:test:setting"
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Reset to default"
                  id="kbn.management.settings.field.resetToDefaultLinkText"
                  values={Object {}}
                />
              </EuiLink>
                 
            </span>
          </span>
        }
        isInvalid={false}
        label="number:test:setting"
      >
        <EuiFieldNumber
          aria-label="number test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-number:test:setting"
          disabled={false}
          fullWidth={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          value={10}
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for select setting should render as read only with help text if overridden 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Select test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        orange
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="select:test:setting-aria"
      title={
        <h3>
          Select test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "select:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <EuiText
            grow={true}
            size="xs"
          >
            <FormattedMessage
              defaultMessage="This setting is overriden by the Kibana server and can not be changed."
              id="kbn.management.settings.field.helpText"
              values={Object {}}
            />
          </EuiText>
        }
        isInvalid={false}
        label="select:test:setting"
      >
        <EuiSelect
          aria-label="select test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-select:test:setting"
          disabled={true}
          fullWidth={false}
          hasNoInitialSelection={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          options={
            Array [
              Object {
                "text": "apple",
                "value": "apple",
              },
              Object {
                "text": "orange",
                "value": "orange",
              },
              Object {
                "text": "banana",
                "value": "banana",
              },
            ]
          }
          value="banana"
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for select setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Select test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="select:test:setting-aria"
      title={
        <h3>
          Select test setting
          <EuiIconTip
            aria-label="Custom setting"
            color="primary"
            content={
              <FormattedMessage
                defaultMessage="Custom setting"
                id="kbn.management.settings.field.customSettingTooltip"
                values={Object {}}
              />
            }
            type="asterisk"
          />
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "select:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="select:test:setting"
      >
        <EuiSelect
          aria-label="select test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-select:test:setting"
          disabled={false}
          fullWidth={false}
          hasNoInitialSelection={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          options={
            Array [
              Object {
                "text": "apple",
                "value": "apple",
              },
              Object {
                "text": "orange",
                "value": "orange",
              },
              Object {
                "text": "banana",
                "value": "banana",
              },
            ]
          }
          value="orange"
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for select setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Select test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="select:test:setting-aria"
      title={
        <h3>
          Select test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "select:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="select:test:setting"
      >
        <EuiSelect
          aria-label="select test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-select:test:setting"
          disabled={false}
          fullWidth={false}
          hasNoInitialSelection={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          options={
            Array [
              Object {
                "text": "apple",
                "value": "apple",
              },
              Object {
                "text": "orange",
                "value": "orange",
              },
              Object {
                "text": "banana",
                "value": "banana",
              },
            ]
          }
          value="orange"
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for select setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for Select test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        orange
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="select:test:setting-aria"
      title={
        <h3>
          Select test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "select:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <span>
            <span>
              <EuiLink
                aria-label="Reset {ariaName} to default"
                color="primary"
                data-test-subj="advancedSetting-resetField-select:test:setting"
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Reset to default"
                  id="kbn.management.settings.field.resetToDefaultLinkText"
                  values={Object {}}
                />
              </EuiLink>
                 
            </span>
          </span>
        }
        isInvalid={false}
        label="select:test:setting"
      >
        <EuiSelect
          aria-label="select test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-select:test:setting"
          disabled={false}
          fullWidth={false}
          hasNoInitialSelection={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          options={
            Array [
              Object {
                "text": "apple",
                "value": "apple",
              },
              Object {
                "text": "orange",
                "value": "orange",
              },
              Object {
                "text": "banana",
                "value": "banana",
              },
            ]
          }
          value="banana"
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for string setting should render as read only with help text if overridden 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for String test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        null
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="string:test:setting-aria"
      title={
        <h3>
          String test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "string:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <EuiText
            grow={true}
            size="xs"
          >
            <FormattedMessage
              defaultMessage="This setting is overriden by the Kibana server and can not be changed."
              id="kbn.management.settings.field.helpText"
              values={Object {}}
            />
          </EuiText>
        }
        isInvalid={false}
        label="string:test:setting"
      >
        <EuiFieldText
          aria-label="string test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-string:test:setting"
          disabled={true}
          fullWidth={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="foo"
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for string setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for String test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="string:test:setting-aria"
      title={
        <h3>
          String test setting
          <EuiIconTip
            aria-label="Custom setting"
            color="primary"
            content={
              <FormattedMessage
                defaultMessage="Custom setting"
                id="kbn.management.settings.field.customSettingTooltip"
                values={Object {}}
              />
            }
            type="asterisk"
          />
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "string:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="string:test:setting"
      >
        <EuiFieldText
          aria-label="string test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-string:test:setting"
          disabled={false}
          fullWidth={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          value=""
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for string setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for String test setting",
              }
            }
          />
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="string:test:setting-aria"
      title={
        <h3>
          String test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "string:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={null}
        isInvalid={false}
        label="string:test:setting"
      >
        <EuiFieldText
          aria-label="string test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-string:test:setting"
          disabled={false}
          fullWidth={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          value=""
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;

exports[`Field for string setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  className="mgtAdvancedSettings__field"
  component="div"
  direction="row"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
  >
    <EuiDescribedFormGroup
      className="mgtAdvancedSettings__fieldWrapper"
      description={
        <React.Fragment>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Description for String test setting",
              }
            }
          />
          <React.Fragment>
            <EuiSpacer
              size="s"
            />
            <EuiText
              grow={true}
              size="xs"
            >
              <React.Fragment>
                <FormattedMessage
                  defaultMessage="Default: {value}"
                  id="kbn.management.settings.field.defaultValueText"
                  values={
                    Object {
                      "value": <EuiCode>
                        null
                      </EuiCode>,
                    }
                  }
                />
              </React.Fragment>
            </EuiText>
          </React.Fragment>
        </React.Fragment>
      }
      fullWidth={false}
      gutterSize="l"
      idAria="string:test:setting-aria"
      title={
        <h3>
          String test setting
          
        </h3>
      }
      titleSize="xs"
    >
      <EuiFormRow
        describedByIds={
          Array [
            "string:test:setting-aria",
          ]
        }
        error={null}
        fullWidth={false}
        hasEmptyLabelSpace={false}
        helpText={
          <span>
            <span>
              <EuiLink
                aria-label="Reset {ariaName} to default"
                color="primary"
                data-test-subj="advancedSetting-resetField-string:test:setting"
                onClick={[Function]}
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Reset to default"
                  id="kbn.management.settings.field.resetToDefaultLinkText"
                  values={Object {}}
                />
              </EuiLink>
                 
            </span>
          </span>
        }
        isInvalid={false}
        label="string:test:setting"
      >
        <EuiFieldText
          aria-label="string test setting"
          compressed={false}
          data-test-subj="advancedSetting-editField-string:test:setting"
          disabled={false}
          fullWidth={false}
          isLoading={false}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="foo"
        />
      </EuiFormRow>
    </EuiDescribedFormGroup>
  </EuiFlexItem>
  <EuiFlexItem
    component="div"
    grow={false}
  />
</EuiFlexGroup>
`;
